debug: bullet point on rich_text_editor was not showing, but it solved.

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
   list-style: decimal;
   padding-left: 2em;
 }
+
+ol,
+ul,
+menu {
+  list-style: disc;
+  margin: 0;
+  padding: 0;
+}
 /* Apply Reach Text Bullet Point Style - End */
 
 @layer base {
